# M5Gemini

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  apps_nvs.csv  merge_files.cmd  partitions.csv  sdkconfig  sdkconfig.old  settings.txt
components/M5GFX/src/lgfx/Fonts/efont/: lgfx_efont_en.c  lgfx_efont_en.h
components/M5GFX/src/lgfx/v1/: lgfx_fonts.cpp  lgfx_fonts.hpp
components/M5Unified/src/utility/: Mic_Class.hpp  Speaker_Class.hpp
main/: CMakeLists.txt  cacert_11.pem  elevenlabs_root_cert.pem  google_root_cert.pem  idf_component.yml  main.cpp
main/app/: audio_buffer.cpp  audio_buffer.h  event_bits.h  gemini_app.cpp  gemini_app.h  http_client.cpp  http_client.h  ws_client.cpp  ws_client.h
main/app/assets/: Geist14.c  Geist14.h  Inter14.c  Inter14.h  anm_disconnected.h  anm_error.h  anm_internet.h  anm_mic.h  anm_playing1.h  anm_playing2.h  anm_playing3.h  anm_wifi.h  g_fonts.cpp  g_fonts.hpp  gemini_icon.h  qr_deepgram.h  qr_elevenlabs.h  qr_gemini.h
main/app/utils/anim/: hl_text.cpp  scroll_text.cpp  scroll_text.h
main/app/utils/theme/: theme_define.h
main/app/utils/ui/: dialog.cpp  dialog.h  settings_screen.cpp  settings_screen.h
main/hal/: hal.h  hal_cardputer.cpp  hal_cardputer.h
main/hal/keyboard/: keyboard.h
main/hal/wifi/: wifi.cpp  wifi.h
main/settings/: settings.cpp  settings.h
